Add the resolution timeout from defaults to ResolutionRequest.Spec
And use that as the default timeout for cancelling a resolver attempt.
